--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template",
+  "name": "world-traveler",
   "version": "0.0.0",
-  "description": "Node.js/Express Template",
+  "description": "Node.js/Express world-traveler",
   "main": "app/index.js",
   "directories": {
     "test": "test"
@@ -22,14 +22,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nss-cohort-2014-06-07/template"
+    "url": "https://github.com/jessicafraines/world-traveler"
   },
-  "author": "Chyld Medford <chyld.medford@gmail.com>",
+  "author": "Jessica Raines <jessicafraines@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nss-cohort-2014-06-07/template/issues"
+    "url": "https://github.com/jessicafraines/world-traveler/issues"
   },
-  "homepage": "https://github.com/nss-cohort-2014-06-07/template",
+  "homepage": "https://github.com/jessicafraines/world-traveler",
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.6.5",
